--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Knife landing page</title>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <title>Machete landing page</title>
     <link rel="stylesheet" type="text/css" href="./index.css"/>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Allura"/>
   </head>
