--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <div>
         <h1 id="title">Buy your machete right now !</h1>
-        <form id="form" action="https://www.freecodecamp.org/email-submit" method="POST">
+        <form id="form" action="#">
           <input id="email" name="email" type="email" placeholder="Enter your email here" required/>
           <input id="submit" type="submit" class="btn" value="Get started">
         </form>
